--- a/src/index.css
+++ b/src/index.css
@@ -25,28 +25,42 @@
       @apply text-gray;
    }
 
+   footer {
+      background: linear-gradient(to bottom, #e7e7ef 0%, #f4f4fa 5%, #fff 10%);
+   }
+
+   @media screen and (max-width: 768px) {
+      footer {
+         background: none;
+      }
+   }
+
 }
 
 @layer components {
-   .nav-links {
+   .nav-link {
       @apply font-bold hover:text-majorelleBlue;
       text-decoration: none;
       white-space: nowrap;
    }
 
-   .sub-links {
+   .sub-link {
       @apply h-full flex items-center;
    }
 
-   .sub-links.active-sub-link {
+   .sub-link.active-sub-link {
       @apply border-2 border-majorelleBlue;
    }
 
-   .sub-links a {
+   .sub-link a {
       text-decoration: none;
    }
 
    .translate {
       box-shadow: 0 0 1px 0 #0000001f, 0 5px 10px 0 #00000029;
+   }
+
+   .footer-socials a {
+      text-decoration: underline;
    }
 }
