ui for driver page, earnings page, cities api test, additional ui changes.

--- a/src/index.css
+++ b/src/index.css
@@ -63,7 +63,7 @@
       text-decoration: none;
    }
 
-   .translate {
+   .dropdown-shadow {
       box-shadow: 0 0 1px 0 #0000001f, 0 5px 10px 0 #00000029;
    }
 
